--- a/src/components/cells/Header/style.css
+++ b/src/components/cells/Header/style.css
@@ -21,14 +21,21 @@
     cursor: default;
 }
 
-.navbar a {
+.my-nav a {
+    margin: 0 2rem;
     font-size: 1.7rem;
     color: var(--text-color);
-    margin-left: 4rem;
     transition: 0.5s;
 }
 
-.navbar a:hover,
-.navbar a:active {
-    color: var(--main-color)
+.my-nav a:last-child {
+    margin-left: 2rem;
+    margin-right: 0;
 }
+
+.my-nav .active-section {
+    transition: width 0.2s ease; 
+    color: var(--text-color);
+    border-bottom: 2px solid black;
+}
+
