--- a/src/index.css
+++ b/src/index.css
@@ -1,60 +1,60 @@
 @import url('https://fonts.googleapis.com/css2?family=Arvo&family=Assistant&display=swap');
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  text-decoration: none;
-  border: none;
-  outline: none;
-  scroll-behavior: smooth;
-  font-family: 'Assistant', sans-serif;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	text-decoration: none;
+	border: none;
+	outline: none;
+	scroll-behavior: smooth;
+	font-family: 'Assistant', sans-serif;
 }
 
 :root {
-  line-height: 1.5;
-  font-weight: 400;
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+	line-height: 1.5;
+	font-weight: 400;
+	color-scheme: light dark;
+	color: rgba(255, 255, 255, 0.87);
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-text-size-adjust: 100%;
 
-  --primary-bg-color: rgb(233, 206, 102);
-  --secondary-bg-color: rgb(223, 182, 48);
-  --text-color: #050505;
-  --main-color: rgb(71, 58, 6);
+	--primary-bg-color: rgb(233, 206, 102);
+	--secondary-bg-color: rgb(223, 182, 48);
+	--text-color: #050505;
+	--main-color: rgb(71, 58, 6);
 }
 
 ::-webkit-scrollbar {
-    width: 0.3rem;
+	width: 0.3rem;
 }
- 
+
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-    border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	border-radius: 10px;
 }
- 
+
 ::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
 html {
-  font-size: 62.5%;
-  overflow-x: hidden;
+	font-size: 62.5%;
+	overflow-x: hidden;
 }
 
 body {
-  background: var(--primary-bg-color);
-  color: var(--text-color);
+	background: var(--primary-bg-color);
+	color: var(--text-color);
 }
 
 span {
-  color: var(--main-color);
+	color: var(--main-color);
 }
 
 .form-control {
@@ -76,13 +76,13 @@ span {
 	&:focus {
 		box-shadow: 0 0.125rem 0.25rem rgba(165, 163, 174, 0.3);
 		outline: 0;
-    color: var(--text-color);
-    background: var(--secondary-bg-color);
+		color: var(--text-color);
+		background: var(--secondary-bg-color);
 	}
 }
 
 textarea {
-  resize: none;
+	resize: none;
 }
 
 .form-control[type=file] {
@@ -98,82 +98,157 @@ textarea {
 }
 
 .form-control::-moz-placeholder {
-    color: var(--text-color);
+	color: var(--text-color);
 	opacity: 1;
 }
 
 .form-control::placeholder {
-    color: var(--text-color);
+	color: var(--text-color);
 	opacity: 1;
 }
 
 .heading {
-  font-size: 4.5rem;
-  text-align: center;
+	font-size: 4.5rem;
+	text-align: center;
 }
 
 section {
-  min-height: 100vh;
-  padding: 10rem 9% 2rem;
+	min-height: 100vh;
+	padding: 10rem 9% 2rem;
 }
 
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+	font-weight: 500;
+	color: #646cff;
+	text-decoration: inherit;
 }
-a:hover {
+
+.profile-image img{
+	width: 35vw;
+	animation: moveimage 4s ease-in-out infinite;
+}
+
+@keyframes moveimage {
+	0% {
+		transform: translateY(0);
+	}
+	
+	50% {
+		transform: translateY(-2.4rem);
+	}
+	
+	100% {
+		transform: translateY(0);
+	}
+}
+
+/* a:hover {
   color: #535bf2;
-}
+} */
 
 .btn {
-  display: inline-block;
-  padding: 1rem 2.8rem;
-  background: var(--main-color);
-  border-radius: 4rem;
-  font-size: 1.2rem;
-  box-shadow: 0 0
-   0.5rem var(--main-color);
-  color: var(--secondary-bg-color);
-  letter-spacing: 0.1rem;
-  font-weight: 600;
+	display: inline-block;
+	padding: 1rem 2.8rem;
+	background: var(--main-color);
+	border-radius: 4rem;
+	font-size: 1.2rem;
+	box-shadow: 0 0 0.5rem var(--main-color);
+	color: var(--secondary-bg-color);
+	letter-spacing: 0.1rem;
+	font-weight: 600;
 }
 
-/* a 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+@media (max-width: 1200px) {
+	html {
+		font-size: 55%;
+	}
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+@media (max-width: 991px) {
+	/* html {
+		font-size: 80%;
+	} */
+	.header {
+		padding: 2rem 3%;
+	}
+	section {
+		padding: 10rem 3% 2rem;
+	}
+	footer {
+		padding: 2rem 3%;
+	}
+	.services h2 {
+		padding-bottom: 7rem;
+	}	
+
+	.portfolio {
+		padding-bottom: 7rem;
+	}
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
+@media (max-width: 768px) {
+
+	#hamburger-icon {
+		display: block;
+	}
+	
+	.profile-image img{
+		width: 70vw;
+	}
+
+	.navbar {
+		position: absolute;
+		top: 100%;
+		left: 0;
+		width: 100%;
+		padding: 1rem 3%;
+		background: var(--secondary-bg-color);
+		flex-direction: column;
+		align-content: start;
+	}
+
+	.my-nav a{
+		padding: 2rem 2%;
+	}
+
+	.my-nav a:last-child{
+		margin: 0;
+	}
+
+	.home {
+		flex-direction: column;
+	}
+
+	.home h3 {
+		font-size: 2.6rem;
+	}
+
+	.services h2 {
+		margin-bottom: 3rem;
+	}
+	
+	.about {
+		flex-direction: column-reverse;
+	}
+	
+	.portfolio h2 {
+		margin-bottom:  3rem;
+	}
+	.home-content {
+		width: 100%;
+	}
+}
+
+@media (max-width:450px) {
+	html {
+		font-size: 50%;
+		background: red;
+	}
+}
+
+@media (max-width: 365px) {
+	.profile-image img {
+		width: 90vw;
+	}
+}
