--- a/src/components/cells/About/style.css
+++ b/src/components/cells/About/style.css
@@ -1,6 +1,7 @@
 
 .about {
-    background: var(--secondary-bg-color);
+    background: var(--main-light-2);
+    color: var(--white-color);
 }
 
 .about-img img {
@@ -13,35 +14,17 @@
 }
 
 .about-content h2 {
+    color: var(--text-color);
     text-align: start;
 }
 
 .about-content p {
+    color: var(--black-color);
     font-size: 1.6rem;
     margin: 2rem 0 3rem;
 }
 
-span {
-    color: var(--main-color);
+.about-content h2 span {
+    color: var(--main-dark-1);
 }
 
-.social-media a {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 4rem;
-    height: 4rem;
-    background: transparent;
-    border: 2rem solid var(--main-color);
-    border-radius: 50%;
-    font-size: 2rem;
-    color: var(--text-color);
-    margin: 3rem 1.4rem 3rem 0;
-    transition: 0.5 ease;
-}
-
-.social-media a:hover {
-    background: var(--main-color);
-    color: var(--secondary-bg-color);
-    box-shadow: 0 0 1rem var((--main-color));
-}
