--- a/src/components/cells/Contact/style.css
+++ b/src/components/cells/Contact/style.css
@@ -2,6 +2,10 @@
     margin-bottom: 3rem;
 }
 
+.contact h2 span {
+    color: var(--main-color)
+}
+
 .contact form {
     max-width: 70rem;
     margin: 1rem auto;
