--- a/src/components/cells/Portfolio/style.css
+++ b/src/components/cells/Portfolio/style.css
@@ -1,13 +1,19 @@
 
 
 .portfolio {
-    background: var(--secondary-bg-color);
+    background: var(--main-light-1);
     
 }
 
 .portfolio-content h2 {
     margin-bottom: 4rem;
 }
+
+.portfolio h2 span {
+    color: var(--main-dark-1);
+
+}
+
 
 .portfolio-container {
     font-size: 1.6rem;
@@ -33,9 +39,10 @@
     position: absolute;
     bottom: 0;
     left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(0,0,0,0.1), var(--main-color));
+    background: linear-gradient(rgba(0,0,0,0.1), var(--white-color));
 }
 
 .portfolio-box img {
