--- a/src/components/cells/Section/style.css
+++ b/src/components/cells/Section/style.css
@@ -4,21 +4,25 @@
 
 .home-content h3 {
     font-size: 3.2rem;
-    font-weight: 700;
+    font-weight: 600;
+    color: var(--text-color-section);
 }
 
 .home-content h1 {
     font-size: 5.6rem;
-    font-weight: 700;
     line-height: 1.3;
+    font-weight: 800;
+    color: var(--text-color-section);
 }
 
 .home-content p {
     font-size: 1.6rem;
+    font-weight: 500;
+    color: var(--text-color-section);
 }
 
-span {
-    color: var(--main-color);
+.home-content h3 span {
+    color: var(--main-dark-1);
 }
 
 .social-media a {
@@ -31,13 +35,13 @@ span {
     border: 2rem solid var(--main-color);
     border-radius: 50%;
     font-size: 2rem;
-    color: var(--text-color);
+    color: var(--white-color);
     margin: 3rem 1.4rem 3rem 0;
     transition: 0.5 ease;
 }
 
-.social-media a:hover {
+/* .social-media a:hover {
     background: var(--main-color);
     color: var(--secondary-bg-color);
     box-shadow: 0 0 1rem var((--main-color));
-}
+} */
