--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Arvo&family=Assistant&display=swap');
 
+
 * {
 	margin: 0;
 	padding: 0;
@@ -23,10 +24,24 @@
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
 
-	--primary-bg-color: rgb(233, 206, 102);
+	/* --primary-bg-color: rgb(233, 206, 102);
 	--secondary-bg-color: rgb(223, 182, 48);
 	--text-color: #050505;
-	--main-color: rgb(71, 58, 6);
+	--main-color: rgb(71, 58, 6); */
+
+	--grey-color: #999191;
+	--white-color: #fff;
+	--black-color: #000;
+	--text-color-section: #000;
+	--text-color: #000;
+
+	--main-color: rgb(188, 10, 10);
+	--main-light-1: rgb(180, 85, 85);
+	--main-light-2: rgb(224, 169, 169);
+	--main-dark-1: rgb(116, 7, 7);
+	
+	--primary-bg-color: #fff;
+	--secondary-bg-color: rgb(188, 10, 10);
 }
 
 ::-webkit-scrollbar {
@@ -53,13 +68,10 @@ body {
 	color: var(--text-color);
 }
 
-span {
-	color: var(--main-color);
-}
 
 .form-control {
 	color: var(--text-color);
-	background: var(--secondary-bg-color);
+	background: var(--grey-color);
 	border: none;
 	display: block;
 	width: 100%;
@@ -77,7 +89,7 @@ span {
 		box-shadow: 0 0.125rem 0.25rem rgba(165, 163, 174, 0.3);
 		outline: 0;
 		color: var(--text-color);
-		background: var(--secondary-bg-color);
+		background: var(--grey-color);
 	}
 }
 
@@ -110,6 +122,7 @@ textarea {
 .heading {
 	font-size: 4.5rem;
 	text-align: center;
+	color: var(--text-color-section);
 }
 
 section {
@@ -127,6 +140,7 @@ a {
 .profile-image img{
 	width: 35vw;
 	animation: moveimage 4s ease-in-out infinite;
+	filter: drop-shadow(2px 4px 6px black);
 }
 
 @keyframes moveimage {
@@ -154,7 +168,7 @@ a {
 	border-radius: 4rem;
 	font-size: 1.2rem;
 	box-shadow: 0 0 0.5rem var(--main-color);
-	color: var(--secondary-bg-color);
+	color: var(--white-color);
 	letter-spacing: 0.1rem;
 	font-weight: 600;
 }
