--- a/src/components/cells/Portfolio/style.css
+++ b/src/components/cells/Portfolio/style.css
@@ -1,7 +1,7 @@
 
 
 .portfolio {
-    background: var(--main-light-1);
+    background: var(--primary-bg-color);
     
 }
 
@@ -10,7 +10,7 @@
 }
 
 .portfolio h2 span {
-    color: var(--main-dark-1);
+    color: var(--main-color);
 
 }
 
@@ -20,21 +20,25 @@
 }
 
 .portfolio-container .portfolio-box {
-    /* padding: 2rem; */
-    color: var(--white-color);
-    background: var(--main-color);
+    background: var(--secondary-bg-color);
     border-radius: 2rem;
-    border: 0.5rem solid var(--main-dark-1);
+    border: 0.5rem solid var(--secondary-bg-color);
     overflow: hidden;
     transition: 0.5s ease;
 }
 
 .portfolio-container .portfolio-box h4 {
-    font-size: 2rem;
+    font-size: 2.4rem;
+    font-weight: 800;
 }
 
+.portfolio-container .portfolio-box h4 a {
+    color: var(--main-color);
+}
+
+
 .portfolio-container .portfolio-box p {
-    color: var(--grey-color);
+    /* color: var(--grey-color); */
     font-size: 1.5rem;
 }
 
