--- a/src/index.css
+++ b/src/index.css
@@ -142,9 +142,12 @@ a {
 }
 
 .profile-image img{
-	width: 35vw;
-	animation: moveimage 4s ease-in-out infinite;
-	filter: drop-shadow(2px 4px 6px black);
+    width: 35vw;
+    /* animation: moveimage 4s ease-in-out infinite; */
+    filter: drop-shadow(3px 3px 0px #fff);
+    height: 45rem;
+    object-fit: cover;
+    object-position: top;
 }
 
 @keyframes moveimage {
@@ -181,6 +184,9 @@ a {
 	html {
 		font-size: 55%;
 	}
+	.profile-image img {
+		height: 40rem;
+	}
 }
 
 @media (max-width: 991px) {
@@ -203,6 +209,9 @@ a {
 	.portfolio {
 		padding-bottom: 7rem;
 	}
+	.profile-image img {
+		height: 35rem;
+	}
 }
 
 @media (max-width: 768px) {
@@ -213,6 +222,7 @@ a {
 	
 	.profile-image img{
 		width: 70vw;
+		height: 45rem;
 	}
 
 	.navbar {
@@ -263,10 +273,15 @@ a {
 		font-size: 50%;
 		background: red;
 	}
+	.profile-image img{
+		width: 70vw;
+		height: 100%;
+	}
 }
 
 @media (max-width: 365px) {
-	.profile-image img {
-		width: 90vw;
+	.profile-image img{
+		width: 70vw;
+		height: 40rem;
 	}
 }
