--- a/src/index.css
+++ b/src/index.css
@@ -141,10 +141,17 @@ a {
 	text-decoration: inherit;
 }
 
+/* .profile-image {
+	border: 2px solid #fff;
+	text-align: center;
+	border-radius: 50%;
+	padding: 2rem;
+} */
+
 .profile-image img{
     width: 35vw;
     /* animation: moveimage 4s ease-in-out infinite; */
-    filter: drop-shadow(3px 3px 0px #fff);
+    filter: drop-shadow(3px 3px 0px var(--main-color));
     height: 45rem;
     object-fit: cover;
     object-position: top;
