--- a/src/components/cells/About/style.css
+++ b/src/components/cells/About/style.css
@@ -8,6 +8,10 @@
     width: 35vw;
 }
 
+.about-content {
+    margin: 2rem;
+}
+
 .about-content h3 {
     font-size: 2.6rem;
     font-weight: 700;
