--- a/src/components/cells/Portfolio/style.css
+++ b/src/components/cells/Portfolio/style.css
@@ -49,7 +49,7 @@
 
 .portfolio-container .portfolio-box img {
     width: 100%;
-    /* object-fit: cover; */
+    object-fit: cover;
     height: 50%;
 }
 
