--- a/src/index.css
+++ b/src/index.css
@@ -149,14 +149,14 @@ a {
 } */
 
 .profile-image img{
-    width: 40vw;
+    /* width: 40vw; */
     /* animation: moveimage 4s ease-in-out infinite; */
-    /* filter: drop-shadow(3px 3px 0px var(--white-color)); */
+    /* filter: drop-shadow(3px 3px 0px gray); */
     height: 45rem;
     object-fit: cover;
     object-position: top;
-	/* border: 2px solid var(--main-color); */
-	border-radius: 8px;
+	border: 2px solid var(--main-color);
+	border-radius: 30%;
 	/* background: var(--secondary-bg-color); */
 }
 
@@ -228,33 +228,11 @@ a {
 
 @media (max-width: 768px) {
 
-	/* #hamburger-icon {
-		display: block;
+	.profile-image img{
+		width: 40vw;
+		height: 100%;
 	}
 	
-	.profile-image img{
-		width: 70vw;
-		height: 45rem;
-	}
-
-	.navbar {
-		position: absolute;
-		top: 100%;
-		left: 0;
-		width: 100%;
-		padding: 1rem 3%;
-		background: var(--secondary-bg-color);
-		flex-direction: column;
-		align-content: start;
-	}
-
-	.my-nav a{
-		padding: 2rem 2%;
-	}
-
-	.my-nav a:last-child{
-		margin: 0;
-	} */
 
 	.home {
 		flex-direction: column;
@@ -286,7 +264,7 @@ a {
 		background: red;
 	}
 	.profile-image img{
-		width: 70vw;
+		width: 50vw;
 		height: 100%;
 	}
 }
